--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 *.js
 node_modules
 *prisma/migrations*
+/10-integrated-node-and-ts-project/project/prisma/migrations/
+/10-integrated-node-and-ts-project/project/prisma/dev.db
+dist/
