--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@types/node": "^18.14.1"
+    "@types/node": "^18.14.1",
+    "ts-node": "^10.9.1"
   }
 }
